# assettosync_server

./: .gitignore  Cargo.toml  README.md  Rocket.toml  config.json.example
src/: cli.yaml  common.rs  install_task.rs  main.rs
src/archive_unpacker/: mod.rs  unpack_archive.rs
src/config/: mod.rs
src/endpoints/: index.rs  login.rs  mod.rs  mod_management.rs  mods_json.rs  style_css.rs  user_management.rs
src/resources/: style.css
src/tests/mocks/: mod.rs  unpack_archive_mock.rs
templates/: change_password.html.hbs  index.html.hbs  login.html.hbs  mod_management.html.hbs  user_management.html.hbs
