[package]
name = "assettosync-server"
version = "0.1.0"
authors = ["Mateusz Szychowski (Muttley) <mateusz@szychowski.it>"]
edition = "2021"

[dependencies]
cfg-if = "1.0.0"
clap = { version = "3.0.0-beta.2", features = ["yaml"] }
compress-tools = "0.12.1"
fs_extra = "1.2.0"
lazy_static = "1.4.0"
rocket = "0.4.10"
rocket_contrib = {version = "0.4.10", features = ["handlebars_templates"] }
rocket-multipart-form-data = "0.9.6"
md-5 = "0.9.1"
mockall = { version = "0.10.2",  features = ["nightly"] }
serde = { version = "1.0.124", features = ["derive"] }
serde_json = "1.0.64"
tempdir = "0.3.7"
sha2 = "0.9.3"
unrar = "0.4.4"
walkdir = "2"
wildmatch = "1.0.13"
